[project]
name = "RSNumberGen"
version = "1.0.0"
description = "Cryptographically secure random generator for strings, numbers, and bytes & hex"
authors = [{ name = "Sammy Folkhome", email = "support@vincio.cc" }]
license = { text = "MIT" }
requires-python = ">=3.7"
readme = "README.md"

[tool.setuptools]
packages = ["RSNumberGen"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
